cabal-version:       2.4
name:                versioned
version:             0.1.0.0
synopsis:            Data versioning framework for
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md

library
  -- Modules exported by the library.
  exposed-modules: Versioned

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
